[package]
name = "silva-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }

uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenvy = "0.15"

